--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Header</h1>
+        <h1>Menu</h1>
     </div>
     
     <div class="main">
